<resources>
    <string name="app_name">TMML Machine Shop Solution</string>
    <string name="submit">Submit</string>
    <string name="Scan">Scan</string>
    <string name="todo">TODO</string>
    <string name="view_jobcard_details">Job Card Details</string>
    <string name="asset_barcode">Asset Barcode</string>
    <string name="scanTextView">TextView</string>
    <string name="locationTextView">Asset(s) at Location</string>
    <string name="button">Scan</string>
    <string name="scan_location">Scan Location</string>
    <string name="submit_audit">Submit Audit</string>
    <string name="scane_location">Scan Location</string>
    <string name="scane_asset_barcode">Scan asset barcode</string>
    <string-array name="machine_state_array">
        <item>select</item>
        <item>Available</item>
        <!--<item>Occupied</item>-->
        <item>Scheduled Maintenance</item>
        <item>Under Maintenance</item>
        <item>Break-down</item>
    </string-array>

    <string-array name="stopPart_state_array">
        <item>select</item>
        <item>Completed</item>
        <item>Pending</item>
    </string-array>

    <string-array name="stopPart_remarks_array">
        <item>Select Remark</item>
        <item>Drawing Issue</item>
        <item>Plan Change Store Requirement</item>
        <item>Process Sequence Wrong</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_card_details">Job Card Details</string>
    <string name="machine_wise_job_card_details">Job Card at Machine</string>
    <string name="start_part_process">Start Part Process</string>
    <string name="stop_part_process">Stop Part Process</string>
    <string name="pending_items_dashboard">Pending Items Dashboard</string>
    <string name="machine_maintenance">Machine Maintenance</string>
    <string name="receive_at_store">Receive at Store</string>
    <string name="drop_at_location">Drop At Location</string>
</resources>
