<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SelectedAuditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:orientation="horizontal"
            android:padding="5dp">

            <EditText
                android:id="@+id/scanLocationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:hint="@string/scane_location"
                android:importantForAutofill="no"
                android:inputType=""
                android:labelFor="@+id/scanLocationTextView"
                android:text="" />

            <Button
                android:id="@+id/scanLocationButton"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:width="@android:dimen/notification_large_icon_width"
                android:background="@color/moveAssetButtonTitle"
                android:baselineAligned="false"
                android:text="@string/scan_location"
                android:layout_width="wrap_content" />

        </LinearLayout>

        <TextView
            android:id="@+id/locationLabelTextView"
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:baselineAligned="true"
            android:labelFor="@+id/locationLabelTextView"
            android:paddingTop="@dimen/margin_end"
            android:text="@string/locationTextView"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:textColor="@color/assetDetailsButtonTitle"
            android:textStyle="bold"
            android:typeface="normal" />

        <EditText
            android:id="@+id/scanAssetTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scane_asset_barcode"
            android:importantForAutofill="no"
            android:inputType=""
            android:labelFor="@+id/scanAssetTextView"
            android:text="" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/pendingAuditAssetLists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@android:dimen/app_icon_size"
            android:orientation="horizontal"
            android:padding="@dimen/margin_end">

            <Button
                android:id="@+id/submitAudit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_green_dark"
                android:text="@string/submit_audit"
                android:textAppearance="@style/TextAppearance.AppCompat.Button" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>