<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    tools:context=".ui.main.HomeFragment">

    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_onboard_background"
        tools:layout_editor_absoluteX="4dp"
        tools:layout_editor_absoluteY="5dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/jobCardDetails"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="@color/assetDetailsButtonBackground"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:drawablePadding="20dp"
        android:text="@string/job_card_details"
        android:textAllCaps="false"
        android:textColor="@color/assetDetailsButtonTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/startPartProcess"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="5dp"
        android:background="@color/auditAssetButtonBackground"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:drawablePadding="20dp"
        android:text="@string/start_part_process"
        android:textAllCaps="false"
        android:textColor="@color/auditAssetButtonTitleButtonTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jobCardDetails" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/stopPartProcess"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="5dp"
        android:background="@color/moveAssetButtonBackground"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:drawablePadding="20dp"
        android:text="@string/stop_part_process"
        android:textAllCaps="false"
        android:textColor="@color/moveAssetButtonTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/startPartProcess" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pendingItemsDashboard"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="8dp"
        android:background="@color/reportButtonBackground"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:drawablePadding="20dp"
        android:text="@string/pending_items_dashboard"
        android:textAllCaps="false"
        android:textColor="@color/reportButtonTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stopPartProcess" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/machineMaintenance"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="8dp"
        android:background="@color/reportButtonBackground"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:drawablePadding="20dp"
        android:text="@string/machine_maintenance"
        android:textAllCaps="false"
        android:textColor="@color/reportButtonTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pendingItemsDashboard" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dropAtLocation"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:layout_marginTop="8dp"
        android:background="@color/reportButtonBackground"
        android:drawableRight="@drawable/ic_navigate_next_black_24dp"
        android:drawablePadding="20dp"
        android:text="@string/drop_at_location"
        android:textAllCaps="false"
        android:textColor="@color/reportButtonTitle"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/machineMaintenance" />

</androidx.constraintlayout.widget.ConstraintLayout>